--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Captain Focus - Voice-Based AI Study Companion</title>
+    
+  <script id="omnidimension-web-widget" async src="https://backend.omnidim.io/web_widget.js?secret_key=f5666e7905306e6a74759f728a27ca83" ></script>
   </head>
   <body>
     <div id="root"></div>
